--- a/final/index.html
+++ b/final/index.html
@@ -148,8 +148,6 @@ navigator.getUserMedia (
     <input id="treble" type="range" min="-20" max="20" step="1" value="0"/>
     <h4>Balance</h4>
     <input id="balance" type="range" min="0" max="1" step="0.01" value="0.5"/>
-    <h4>Radial Frequency (ms)</h4>
-    <input id="rfreq" type="range" min="500" max="20000" step="100" value="2000"/>
     <h4>Visualization Mode</h4>
     <select id="mode">
         <option value="frequency">Frequency</option>
@@ -157,6 +155,8 @@ navigator.getUserMedia (
         <option value="rfrequency">Radial Frequency</option>
         <option value="rtime">Radial Waveform</option>
     </select>
+    <h4>Radial Frequency (ms)</h4>
+    <input id="rfreq" type="range" min="500" max="20000" step="100" value="2000"/>
     <h4>Data Input Mode</h4>
     <select id="inputMode">
         <option value="file">File</option>
@@ -173,6 +173,7 @@ navigator.getUserMedia (
 </div>
 <div style="clear:both;color:white">
 <h2>Frequency: <span id="frequency">N/A</span> Hz, Amplitude: <span id="amplitude">N/A</span></h2>
+<h4>Double click on canvas for full screen.</h4>
 </div>
 </div>
 
@@ -364,8 +365,7 @@ var n;
         var aspectratio;
         if ($("#textureMode")[0].value == "webcam") {
             backgroundTexture = webcamTexture;
-            aspectratio = 
-            -1.33;
+            aspectratio =  -1.33;
         } else if($("#textureMode")[0].value == "images") {
             backgroundTexture = floorTexture;
             aspectratio = 1;
@@ -498,7 +498,7 @@ var n;
 <script>
 v.addEventListener('play', function() {
    con = c.getContext('2d');
-   // Ratio is actually 1.33:1, but store as power-of-two for webgl and fix in shader
+   // Ratio is actually -1.33:1, but store as power-of-two for webgl and fix in shader
    w = 512; h = 512;
    setInterval(function() {
       if (v.paused || v.ended) return;
